--- a/src/app/modules/elements/author_card/AuthorCard.component.html
+++ b/src/app/modules/elements/author_card/AuthorCard.component.html
@@ -3,18 +3,17 @@
     <p>{{user.user_name}}</p>
   </div>
   <div class="line"><hr></div>
-  <div class="authorInfo"> 
+  <div class="authorInfo">
       <div class="authorImg">
-        <img src="../../../../assets/product2.jpg" > 
+        <img [src]="user.profile_image ? profileImgUrl + '/' + user.profile_image : ''" >
       </div>
       <div class="authorName">
         <a href="profile/authorName">
-        <p>Author Name</p>
+          <p>{{user.user_name}}</p>
         </a>
       </div>
   </div>
 
-</div>  
+</div>
 
-  
-  
+
