--- a/src/app/modules/elements/card_screen/CardScreen.component.html
+++ b/src/app/modules/elements/card_screen/CardScreen.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row no-gutters">
       <div class="col-lg-3 col-md-4 col-sm-6 col-6" *ngFor="let post of posts; let i = index;">
-        <Card [postID]="post._id"></Card>
+        <Card [post]="post"></Card>
       </div>
     </div>
   </div>
