--- a/src/app/modules/elements/header/Header.component.html
+++ b/src/app/modules/elements/header/Header.component.html
@@ -28,7 +28,14 @@
 
         <div *ngIf="loggedIn; then signedIn else signedOut"></div>
         <ng-template #signedIn class="signInIcon">
-          <a class="nav-link" (click)="goProfile()"><img id="userIcon" [src]="user.profile_image" onerror="if (this.src != 'assets/defaultUser.png') this.src = 'assets/defaultUser.png';" height="30px" width="30px"></a>
+          <a class="nav-link" (click)="goProfile()">
+            <img id="userIcon"
+                 [src]="profileImageUrl"
+                 height="30px" width="30px"
+                 alt="Icon"
+                 title="See your profile"
+            >
+          </a>
         </ng-template>
         <ng-template #signedOut class="signOutIcon">
           <a class="btn btn-light action-button linkStyleRed signIn" role="button" (click)="goLogin()">Sign In</a>
