--- a/src/app/modules/pages/post_details/PostDetails.component.html
+++ b/src/app/modules/pages/post_details/PostDetails.component.html
@@ -9,7 +9,9 @@
     </div>
   </div>
   <div class="authorAndEdit">
-    <div class="authorCard"> <AuthorCard [user]="user"></AuthorCard></div>
+    <div class="authorCard">
+      <AuthorCard [user]="user"></AuthorCard>
+    </div>
     <div class="tabs">
       <button class="button1" (click)="goToEdit()">Edit</button>
       <button class="button1" (click)="deletePost()">Delete</button>
