--- a/src/app/modules/pages/post_details/PostDetails.component.html
+++ b/src/app/modules/pages/post_details/PostDetails.component.html
@@ -10,9 +10,12 @@
   </div>
   <div class="authorAndEdit">
     <div class="authorCard"> <AuthorCard [user]="user"></AuthorCard></div>
-    <div class="tabs">
-      <button class="button1"  onclick="location.href='/newpost'">Edit</button>
-      <button class="button1" (click)="deletePost()"> Delete</button>
+    <div *ngIf="checkIsUser()" class="tabs">
+      <a onclick="location.href='/newpost'"><fa-icon [icon]="faPenToSquare" class="edit-button" title="Edit"></fa-icon>
+      </a>
+      <a (click)="deletePost()"><fa-icon [icon]="faTrashCan" class="remove-button" title="Remove"></fa-icon>
+      </a>
     </div>
   </div>
 </div>
+
