--- a/src/app/modules/elements/card_screen/CardScreen.component.html
+++ b/src/app/modules/elements/card_screen/CardScreen.component.html
@@ -1,9 +1,8 @@
 <div>
   <div class="container">
-    <div class="row no-gutters">
-      <div class="col-lg-3 col-md-4 col-sm-6 col-6" *ngFor="let post of posts; let i = index;">
+      <div class="card" *ngFor="let post of posts; let i = index;">
         <Card [post]="post"></Card>
       </div>
-    </div>
+
   </div>
 </div>
