--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <Header></Header>
-<router-outlet></router-outlet>
-<Footer></Footer>
+<div class="outer">
+  <div class="inner">
+    <router-outlet></router-outlet>  
+  </div>
+</div>
+<div class="foot-comp">
+  <Footer></Footer>
+</div>
+
