--- a/src/app/modules/pages/post_details/PostDetails.component.html
+++ b/src/app/modules/pages/post_details/PostDetails.component.html
@@ -4,8 +4,10 @@
       <ImageCarousel [slides]="post.images"></ImageCarousel>
     </div>
     <div class="productDescription">
-      {{post.title}}
-      {{post.content}}
+      <div class="title">{{post.title}}</div>
+      <h5>Review:</h5>
+      <div class="content">{{post.content}}</div>
+      <span class="hashTagbox"*ngFor="let tag of post.keywords"><span class="hashTagItem">{{tag}}</span></span>
     </div>
   </div>
   <div class="authorAndEdit">
