working on removing the border

--- a/src/app/modules/elements/card_screen/CardScreen.component.css
+++ b/src/app/modules/elements/card_screen/CardScreen.component.css
@@ -7,21 +7,19 @@
     flex-wrap: wrap;
 }
 
-.card-text {
-    font-size: 1vw;
-}
 
-.card {
+.screencard {
     width: 25%;
+    border-style: hidden;
 }
 @media (max-width: 768px){
-    .card {
+    .screencard {
         width: 50%;
     }
 }
 
 @media (max-width: 900px) and (min-width: 769px){
-    .card {
+    .screencard {
         width: calc(100%/3);
     }
 }
