loaded old post info to edit post

--- a/src/app/modules/pages/post_details/PostDetails.component.html
+++ b/src/app/modules/pages/post_details/PostDetails.component.html
@@ -13,7 +13,7 @@
       <AuthorCard [user]="user"></AuthorCard>
     </div>
     <div *ngIf="checkIsUser()" class="tabs">
-      <a onclick="location.href='/newpost'"><fa-icon [icon]="faPenToSquare" class="edit-button" title="Edit"></fa-icon>
+      <a (click)="goToEdit()"><fa-icon [icon]="faPenToSquare" class="edit-button" title="Edit"></fa-icon>
       </a>
       <a (click)="deletePost()"><fa-icon [icon]="faTrashCan" class="remove-button" title="Remove"></fa-icon>
       </a>
