fixed the post details page

--- a/src/app/modules/elements/image_carousel/ImageCarousel.component.html
+++ b/src/app/modules/elements/image_carousel/ImageCarousel.component.html
@@ -2,7 +2,7 @@
 
   <div id="carouselExampleControls" class="carousel">
     <div class="carousel-inner">
-      <img src="{{ showSlide(slides, i) }}" alt="slide" >
+      <img src="{{ showSlide(slides, i) }}" alt="slide" style = "max-height: 500px; max-width: 500px">
     </div>
   </div>
   <!-- Next and previous buttons -->
