--- a/src/app/modules/elements/image_carousel/ImageCarousel.component.css
+++ b/src/app/modules/elements/image_carousel/ImageCarousel.component.css
@@ -5,6 +5,7 @@
   max-width: 100%;
   position: relative;
   margin: auto;
+  padding: auto;
 }
 
 /* Hide the images by default */
@@ -77,14 +78,15 @@
 
 .carousel {
   text-align: center;
+  margin: auto;
 }
 
 .carousel-inner { 
-  display: block;
+  display: contain;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
-  height: 75vw;
+  width: 90%;
+  height: 30vw;
   display: flex;
   justify-content: center;
 }
