--- a/src/app/modules/pages/post_details/PostDetails.component.html
+++ b/src/app/modules/pages/post_details/PostDetails.component.html
@@ -12,7 +12,7 @@
     <div class="authorCard">
       <AuthorCard [user]="user"></AuthorCard>
     </div>
-    <div class="tabs">
+    <div *ngIf="isPoster" class="tabs">
       <button class="button1" (click)="goToEdit()">Edit</button>
       <button class="button1" (click)="deletePost()">Delete</button>
     </div>
