--- a/src/app/modules/pages/post_details/PostDetails.component.css
+++ b/src/app/modules/pages/post_details/PostDetails.component.css
@@ -71,6 +71,11 @@
 	font-weight: bold;
 }
 
+.favourite {
+	font-size: 20px;
+	margin-right: 180px;
+}
+
 .edit-button{
 	font-size: 20px;
 	margin-right: 10px;
