--- a/src/app/modules/pages/post_details/PostDetails.component.css
+++ b/src/app/modules/pages/post_details/PostDetails.component.css
@@ -71,6 +71,15 @@
 	font-weight: bold;
 }
 
+.edit-button:hover{
+	color: salmon;
+	cursor: pointer;
+}
+
+.remove-button:hover{
+	color: salmon;
+	cursor: pointer;
+}
 .title{
 	font-size: 25px;
 	font-family: Raleway;
