--- a/src/app/modules/pages/404_page/NotFound.component.html
+++ b/src/app/modules/pages/404_page/NotFound.component.html
@@ -1,4 +1,4 @@
-<div class="page">
+<div>
   <h1 class ="oops"> Oops...</h1>
   <h2 class ="desc">The page you are looking for cannot be found</h2>
   <div class="ghost">
