--- a/src/app/modules/pages/create_post/CreatePost.component.html
+++ b/src/app/modules/pages/create_post/CreatePost.component.html
@@ -1,4 +1,4 @@
-<div class="page">
+<div>
   <div class="container">
     <div class="row">
       <div *ngIf="modeParam == 'edit'; then editTitle else newTitle"></div>
