--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
-<Header></Header>
-<div class="outer">
-  <div class="inner">
-    <router-outlet></router-outlet>  
+<div class="outer-container">
+  <Header></Header>
+  <div class="inner-container">
+    <router-outlet></router-outlet>
   </div>
-</div>
-<div class="foot-comp">
   <Footer></Footer>
 </div>
-
