--- a/src/app/modules/pages/post_details/PostDetails.component.html
+++ b/src/app/modules/pages/post_details/PostDetails.component.html
@@ -1,4 +1,4 @@
-<div class="container page">
+<div class="container">
   <div class="postInfo">
     <div class="imagesBox">
       <ImageCarousel [slides]="post.images"></ImageCarousel>
