--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 html, body, app-root {
-    height: 100%;
+  height: 100%;
+  min-height: 100%;
 }
 
 body {
-    margin-bottom: 0;
-    margin-top: 0;
+  margin-bottom: 0;
+  margin-top: 0;
 }
