--- a/src/app/modules/pages/profile_page/ProfilePage.component.html
+++ b/src/app/modules/pages/profile_page/ProfilePage.component.html
@@ -11,6 +11,7 @@
       </div>
       <div class="userBioInfo">{{user.bio}}</div>
     </div>
+    <!-- checks if user is logged in, if yes, then show the edit profile and logout button -->
     <div *ngIf="checkIsUser()" class="buttons">
       <a (click)="goEditProfile()" style="cursor: pointer;"><fa-icon [icon]="faPenToSquare" class="edit-button" title="Edit"></fa-icon>
       </a>
@@ -31,8 +32,12 @@
 
    <!-- Posts  -->
    <div class="userPosts">
-     <CardScreen *ngIf="!showFav" [posts]="posts"></CardScreen>
+     <div class="postMessage" *ngIf="!showFav">
+      <h2> Post your lifestyle!</h2>
+     </div>
+
      <CardScreen *ngIf="showFav" [posts]="favPosts"></CardScreen>
+
    </div>
 
 </div>
