--- a/src/app/modules/pages/profile_page/ProfilePage.component.css
+++ b/src/app/modules/pages/profile_page/ProfilePage.component.css
@@ -56,7 +56,7 @@
   justify-content: center;
   column-gap: 10%;
   align-items: center;
-  font-size: 2.5rem; /* changes sizes of icons*/
+  font-size: 2.0rem; /* changes sizes of icons*/
 }
 
 .edit-button:hover{
@@ -106,6 +106,7 @@ a{
   text-decoration: underline;
   transform: scale(1.5);
   text-decoration-color: red;
+  color: salmon;
 }
 .favorites{
   text-align: center;
@@ -116,6 +117,7 @@ a{
   text-decoration: underline;
   transform: scale(1.5);
   text-decoration-color: red;
+  color: salmon;
 }
 
 .userPosts{
