--- a/src/app/modules/pages/create_post/CreatePost.component.html
+++ b/src/app/modules/pages/create_post/CreatePost.component.html
@@ -43,7 +43,7 @@
         <button class="postButton" (click)="createPost()">Post</button>
       </ng-template>
       <ng-template #editPost>
-        <button class="postButton" (click)="createPost()">Edit</button>
+        <button class="postButton" (click)="createPost()">Save</button>
       </ng-template>
       <button class="cancelButton" (click)="goToPostPage()">Cancel</button>
     </div>
