stops user from changing email

--- a/src/app/modules/pages/edit_profile/EditProfile.component.html
+++ b/src/app/modules/pages/edit_profile/EditProfile.component.html
@@ -17,7 +17,7 @@
         </div>
         <div class="emailBar">
             <header class="titleEmail"></header>
-            <input type="email" placeholder="Email ID" name="" [(ngModel)]="currentUser.email" #ctrl="ngModel" required> <!-- this should be read only-->
+            <input readonly type="email" placeholder="Email ID" name="" [(ngModel)]="currentUser.email" #ctrl="ngModel" required> <!-- this should be read only-->
         </div>
         <div class="bioBar">
             <header class="titleBio"></header>
