Fix user icon not showing

--- a/src/app/modules/elements/header/Header.component.html
+++ b/src/app/modules/elements/header/Header.component.html
@@ -30,7 +30,7 @@
         <ng-template #signedIn class="signInIcon">
           <a class="nav-link" (click)="goProfile()">
             <img id="userIcon"
-                 [src]="profileImageUrl"
+                 [src]="profileImage"
                  height="30px" width="30px"
                  alt="Icon"
                  title="See your profile"
