--- a/src/app/modules/elements/footer/Footer.component.html
+++ b/src/app/modules/elements/footer/Footer.component.html
@@ -3,7 +3,7 @@
     <img src="assets/amimaLogo.jpeg" alt="Amima" width="50" height="50" style="vertical-align: middle;" margin="10px" >
     <a class="link-1" (click)="goHome()">Home</a>
     <a class="link-1" (click)="goAbout()">About</a>
-    <a class="link-1" (click)="goHome()">Contact</a>
+    <a class="link-1" (click)="goContact()">Contact</a>
     <p style="color:#C0C0C0; height: 50%;">
       © 2022 Amima All Rights Reserved
     </p>
