--- a/src/app/modules/pages/about_us/AboutUs.component.html
+++ b/src/app/modules/pages/about_us/AboutUs.component.html
@@ -48,4 +48,21 @@
       </div>
     </div>
   </div>
+
+  
+  <h3 class="contactInfo">Contact</h3>
+  <div class="descBox">
+    <p class="description">
+      <p>Email: info@amimalive.com  </p>
+      <p>
+        <a href="#"> Instagram</a>
+      </p>
+      <p>
+        <a href="#"> Facebook </a>
+      </p>
+    <p>
+  </div>
+
+  
+  
 </div>
