--- a/src/app/modules/pages/about_us/AboutUs.component.css
+++ b/src/app/modules/pages/about_us/AboutUs.component.css
@@ -39,7 +39,7 @@
   grid-template-columns: auto auto auto;
   display: flex;
   justify-content: center;
-  padding-bottom: 300px;
+  padding-bottom: 100px;
 }
 .container1 {
   position: relative;
@@ -174,4 +174,11 @@
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
+}
+
+.contactInfo {
+  text-align: center;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  
 }
