search bar implementation

--- a/src/app/modules/elements/header/Header.component.html
+++ b/src/app/modules/elements/header/Header.component.html
@@ -11,9 +11,9 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav me-sm-auto d-flex">
           <li>
-            <input class="form-control buttonStyleBlack" type="search" >
+            <input class="form-control buttonStyleBlack" [(ngModel)]="searchContent" maxlength="100" type="search" >
           </li>
-          <a class="btn btn-light action-button buttonStyleBlack searchBtn" role="button">Search</a>
+          <a class="btn btn-light action-button buttonStyleBlack searchBtn" (click)="searchFunc()" role="button">Search</a>
         </ul>
 
         <ul class="navbar-nav ms-sm-auto">
