--- a/src/app/modules/pages/post_details/PostDetails.component.html
+++ b/src/app/modules/pages/post_details/PostDetails.component.html
@@ -9,6 +9,15 @@
       <div class="content">{{post.content}}</div>
       <span class="hashTagbox"*ngFor="let tag of post.keywords"><span class="hashTagItem">{{tag}}</span></span>
     </div>
+    <div class="commentSection">
+      <div class="myComment">
+        
+      </div>
+      <div class="myName">
+        {{user.user_name}}
+      </div>
+    </div>
+    <input type="text" placeholder="Comment" name="" [(ngModel)]="myComment.content" #ctrl="ngModel" required>
   </div>
   <div class="authorAndEdit">
     <div class="authorCard">
