--- a/src/app/modules/elements/image_carousel/ImageCarousel.component.html
+++ b/src/app/modules/elements/image_carousel/ImageCarousel.component.html
@@ -2,8 +2,10 @@
 
   <div id="carouselExampleControls" class="carousel">
     <div class="carousel-inner">
+    <div class="carousel-inner">
       <img src="{{ showSlide(slides, i) }}" alt="slide" style = "max-height: 500px; max-width: 500px">
     </div>
+  </div>
   </div>
   <!-- Next and previous buttons -->
   <a class="prev" (click)="getPrev(slides, i)">&#10094;</a>
