--- a/src/app/modules/pages/profile_page/ProfilePage.component.html
+++ b/src/app/modules/pages/profile_page/ProfilePage.component.html
@@ -2,7 +2,7 @@
   <div class="userInfo">
     <div class="userPicture">
       <div class="pictureBox">
-        <img [src]="profileImageUrl + '/' + user.profile_image" alt="User Profile Picture">
+        <img [src]="profileImageUrl + '/' + user.profile_image" (click)="goEditProfile()" alt="User Profile Picture">
       </div>
     </div>
     <div class="userBio">
