Calling delete favourite post API in frontEnd

--- a/src/app/modules/pages/post_details/PostDetails.component.html
+++ b/src/app/modules/pages/post_details/PostDetails.component.html
@@ -20,7 +20,7 @@
         </a>
       </div>
       <div *ngIf="isFavourite" class="favouriteSolid">
-        <a><fa-icon [icon]="faStarSolid" title="Favourite"></fa-icon>
+        <a (click)="deleteFavourite()"><fa-icon [icon]="faStarSolid" title="Favourite"></fa-icon>
         </a>
       </div>
       
