--- a/src/app/modules/pages/post_details/PostDetails.component.css
+++ b/src/app/modules/pages/post_details/PostDetails.component.css
@@ -129,6 +129,73 @@
 	font-size: 20px;
 }
 
+.commentSection{
+	width: 100%;
+}
+
+.myComment {
+	width: 100%;
+	margin: 5%;
+}
+
+.myInfo {
+	display: inline-block;
+	padding-bottom: 10px;
+}
+
+.myName {
+	width: 100%;
+}
+
+.profilePic {
+	width: 30px;
+	margin-right: 10px;
+}
+
+.inputComment {
+	width: 100%;
+	background: transparent;
+    border: none;
+    border-bottom: 1px solid #000000;
+}
+.inputComment:focus {
+	outline: none;
+}
+
+.confirmationButtons {
+	width: 100%;
+	text-align: right;
+}
+
+.confirmComment {
+	display: inline-block;
+	margin-top: 10px;
+	margin-left: 15px;
+}
+
+.createComment {
+	width: auto;
+	border-radius: 12px;
+	border: 2px solid lightgrey;
+	background-color: white;
+	transition-duration: 0.4s;
+}
+.createComment:hover {
+	background-color: lightgrey;
+}
+
+.cancelComment {
+	width: auto;
+	border-radius: 12px;
+	border: 2px solid lightgrey;
+	background-color: white;
+	transition-duration: 0.4s;
+}
+.cancelComment:hover {
+	background-color: lightgrey;
+}
+
+
 @media (max-width: 768px){
 	.container{
 		margin-bottom: 0;
@@ -207,4 +274,31 @@
 		padding: 5%;
 		font-weight: bold;
 	}
+
+	.commentSection{
+		width: 100%;
+	}
+	
+	.myComment {
+		width: 100%;
+	}
+	
+	.myInfo {
+		display: inline-block;
+		padding-bottom: 10px;
+	}
+	
+	.myName {
+		width: 100%;
+	}
+	
+	.profilePic {
+		width: 30px;
+		margin-right: 10px;
+	}
+	
+	.inputComment {
+		width: 100%;
+	}
+
 }
