Load more posts when scroll

--- a/src/app/modules/elements/card/Card.component.html
+++ b/src/app/modules/elements/card/Card.component.html
@@ -20,7 +20,7 @@
       <!--user profile picture section-->
       <div class="userProfileIcon">
         <a (click)="goToProfilePage()" style="cursor: pointer;">
-          <img [src]="profileImgUrl + '/' + post.posterId.profile_image" alt="Profile Image">
+          <img [src]="profileImgUrl + '/' + post.posterId.profile_image">
         </a>
       </div>
       <!--user profile info section-->
